ecmascript/parser/tests/test262-error-references/fail/4e885526e8dfaa12.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/4e885526e8dfaa12.js:1:6
  |
1 | f({x = 0})
  |      ^

